##Text encoding: utf-8

2006-12-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/crystalatom.h: updated API docs.
	* gcu/crystalcleavage.h: ditto.
	* gcu/crystalline.h: ditto.
	* gcu/macros.h: ditto.
	* gcu/object.h: ditto.

2006-12-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/dialog.h: updated API docs and made some members private.
	* gcu/filechooser.h: updated API docs.

2006-12-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.h: fixed typos in docs
	* gcu/chem3ddoc.cc: update m_Empty after loading.
	* gcu/crystaldoc.cc: use m_Emty instead of deprecated SetEmpty().
	* gcu/document.h: updated API docs.
	* gcu/filechooser.h: ditto.
	* gcu/formula.h: minot update.
	* gcu/gldocument.h: updated API docs.

2006-12-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/reference/Doxyfile.in: updated options.
	* gcu/application.h: updated API docs.
	* gcu/chem3ddoc.h: ditto.
	* gcu/chemistry.h: ditto.
	* gcu/glview.h: ditto.
	* gcu/gtkchem3dviewer.h: ditto.
	* gcu/value.cc: enhanced implementation of LocalizedString class.
	* gcu/value.h: updated API docs.

2006-12-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.cc: use help uris instead of filenames.
	* gcu/macros.h: fixed GCU_GCONF_GET macro.
	* gcu/matrix.h: fixed typo in documentation.
	* programs/calc/gchemcalc.cc: don't crash on atrtup when a formula is
	provided on the command line.

2006-12-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: add new help directories.
	* docs/help/3d/C/gchem3d-viewer-unstable.xml: new help related file.
	* docs/help/3d/C/legal.xml: ditto.
	* docs/help/3d/Makefile.am: ditto.
	* docs/help/3d/gchem3d-viewer-unstable.omf.in: ditto.
	* docs/help/Makefile.am: ditto.
	* docs/help/calc/C/gchemcalc-unstable.xml: ditto.
	* docs/help/calc/C/legal.xml: ditto.
	* docs/help/calc/Makefile.am: ditto.
	* docs/help/calc/gchemcalc-unstable.omf.in: ditto.
	* docs/help/table/C/gchemtable-unstable.xml: ditto.