@@ -1,5 +1,10 @@
 ##Text encoding: utf-8
 
+2006-12-27  Jean Bréfort  <jean.brefort@normalesup.org>
+	* gcu/gtkperiodic.c: cleaned code.
+	* gcu/gtkperiodic.h: ditto and updated API docs.
+	* tests/testgtkperiodic.c: ditto.
+
 2006-12-26  Jean Bréfort  <jean.brefort@normalesup.org>
 	* gcu/crystalatom.h: updated API docs.
 	* gcu/crystalcleavage.h: ditto.
